<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/firstPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"
        app:layout_constraintVertical_weight="3">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_msg"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/starwarscoffee"
            app:layout_constraintBottom_toTopOf="@+id/tenantNameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/tenantNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tenant_name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/profileImg"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/firstPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/yellow_rect"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/topUsagePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/usageDayTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/usage_day"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/usageDayDataTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/usageDayTxt"
                android:paddingRight="5dp"
                android:text="22"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/usageDayDataTxt"
                android:text="kW"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topUsagePanel"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/usageMonthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/usage_month"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usageMonthDataTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="56"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kW"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/yellow_rect"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/mainGrid"
        app:layout_constraintTop_toBottomOf="@+id/firstPanel"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/topSavingsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/savingMonthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/savings_month"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="RM"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/savingMonthDataTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topSavingsPanel"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/savingsTotalTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/savings_total"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="RM"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/savingsTotalDataTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="56"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="bottom"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:padding="5dp"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondPanel"
        app:layout_constraintVertical_weight="2"
        tools:layout_editor_absoluteX="0dp">


        <android.support.v7.widget.CardView
            android:id="@+id/paymentCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#FFF27B"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/maybank_pay_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Bill Payment"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/detailsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#FFF27B"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/info_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="More Details"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>

</android.support.constraint.ConstraintLayout>